7.x-1.13.4
----------
 - #1873 Fix dkan_workflow_permissions: Allow Workflow Contributors and Workflow Moderators to view stale drafts and Workflow Moderators to view stale reviews.
 - #1858 Fixed default panelizer setting for page node title.
 - #1874 Fix dkan_update_7013 to not use drush commands.
 - #1876 Removed hard coded colors in the menu.scss file.
 - #1825 Adapt the 'dataQuality' input value druing POD harvest.
 - #1817 Load empty cells as null in fast import.
 - #1846 Adds a hook_update to exclude the data dictionary field from using the markdown toolbar. 
 - #1813 Update the groups page view to sort alphabetically rather than by post date.
 - NuCivic/recline#89 Only load previews for resources using files; API/website links should always display iframe.
 - #1841 Fixed mis-named function on dkan_dataset_content_types.api.php
 - #1814 Update dkan_workflow_permissions to rebuild permissions on enable/disable.
 - #1810 Stop throwing exception on tables with only numeric columns, to prevent preview breaking.
 - #1834 Use last day of year (December 31) for 4 digits end year during temporal POD field import.
 - #1832 Fallback to modified date for field_harvest_source_issued if not available during POD Harvest.
 - #1828 Field Frequency Harvest POD integration is missing support for "irregular" value.
 - #1820 Use "accessURL" during resources harvest if "downloadURL" field is not available.
 - #1857 Fixed publishing options not accessible when dkan_workflow is enabled. 

7.x-1.13.3-RC1
--------------
 - #1810 Stop throwing exception on tables with only numeric columns, to prevent preview breaking.
7.x-1.13.3 2017-04-18
---------------------
 - #1863 Update restws module to v2.7
 - #1859 Fixed update hooks to correctly set jquery version and remove old modified source date field
 - #1864 Update media to 2.0 and remove patch 2534724. 
 - #1829 Fixed missing properties on warning message during datajson harvest cache.