@@ -55,6 +55,13 @@ function dkan_harvest_datajson_cache(HarvestSource $source, $harvest_updatetime)
   $remote = @file_get_contents($source->uri, 0, $context);
 
   if ($remote) {
+    // Some file begins with 'efbbbf' to mark the beginning of the file (The
+    // byte-order mark). (binary level) here we detect it and we remove it,
+    // basically it's the first 3 characters.
+    if (0 === strpos(bin2hex($remote), 'efbbbf')) {
+      $remote = substr($remote, 3);
+    }
+
     $data = FALSE;
     if ($source->type->machineName === 'datajson_v1_1_xml') {
       // Convert the XML document to JSON.
@@ -65,7 +72,6 @@ function dkan_harvest_datajson_cache(HarvestSource $source, $harvest_updatetime)
     elseif ($source->type->machineName === 'datajson_v1_1_json') {
       $data = drupal_json_decode($remote);
     }
-
     // Filter and save the data gathered from the endpoint.
     if ($data) {
       $v = dkan_harvest_datajson_cache_pod_v1_1_json($data, $source,
@@ -90,7 +96,7 @@ function dkan_harvest_datajson_cache(HarvestSource $source, $harvest_updatetime)
  * @return array
  *   Modified array.
  */
-function dkan_harvest_datajson_set_value(&$obj, $path, $value, $override = FALSE) {
+function dkan_harvest_datajson_set_value(array &$obj, $path, $value, $override = FALSE) {
   $updated = FALSE;
   $keys = explode('.', $path);
   $branch = &$obj;
@@ -128,7 +134,7 @@ function dkan_harvest_datajson_set_value(&$obj, $path, $value, $override = FALSE
  * @return mixed
  *   Modified array
  */
-function dkan_harvest_datajson_get_value($obj, $path) {
+function dkan_harvest_datajson_get_value(array $obj, $path) {
   $keys = explode('.', $path);
   $value = $obj;
 
@@ -137,7 +143,9 @@ function dkan_harvest_datajson_get_value($obj, $path) {
       $value = $value[$key];
     }
     else {
-      drupal_set_message(t('Error trying to access to key @path. Please make sure @path exists in the dataset', array('path' => $path, 'title' => $obj['title'])), 'error');
+      drupal_set_message(t('Error trying to access to key "@path". Please make sure "@path" exists in the dataset "@title"',
+        array('@path' => $path, '@title' => $obj['title'])),
+      'error');
       return;
     }
   }
